--- a/index.html
+++ b/index.html
@@ -1,142 +1,171 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>HIGH CHOICE — Premium Watches</title>
-  <link rel="preload" href="videos/Featured1.mp4" as="video">
-  <style>
-    :root{--gold:#c7a16a;--bg:#000;--muted:#bdbdbd}
-    *{box-sizing:border-box} body{margin:0;background:var(--bg);color:#fff;font-family:Inter,system-ui,Arial}
-    header{display:flex;justify-content:space-between;align-items:center;padding:18px 28px;background:linear-gradient(180deg,rgba(0,0,0,0.55),transparent);position:fixed;left:0;right:0;top:0;z-index:30}
-    .brand{font-weight:800;color:var(--gold);letter-spacing:2px}
-    nav a{color:var(--muted);margin-left:14px;text-decoration:none;font-weight:600}
-    .hero{height:92vh;display:flex;align-items:center;justify-content:center;position:relative;overflow:hidden}
-    .bg-video{position:absolute;inset:0;z-index:0}
-    .bg-video video{width:140%;height:140%;object-fit:cover;opacity:0.55}
-    .hero-inner{position:relative;z-index:2;max-width:1200px;margin:0 auto;padding:40px;display:grid;grid-template-columns:1fr 520px;gap:36px;align-items:center}
-    .hero-left{padding:10px}
-    .eyebrow{color:var(--gold);font-weight:700;letter-spacing:2px}
-    h1{font-family: 'Playfair Display', serif;color:var(--gold);font-size:44px;margin:8px 0}
-    p{color:var(--muted);max-width:520px}
-    .btn{display:inline-block;padding:12px 20px;border-radius:999px;background:var(--gold);color:#071018;font-weight:800;margin-right:10px;text-decoration:none}
-    /* mini viewer */
-    #viewer{width:520px;height:520px;border-radius:20px;overflow:hidden;background:#070707;border:1px solid rgba(255,255,255,0.03);box-shadow:0 40px 120px rgba(0,0,0,0.8)}
-    .section{max-width:1200px;margin:36px auto;padding:0 20px}
-    .grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:18px}
-    .brand-card{background:#111;padding:14px;border-radius:12px;text-align:center;border:1px solid rgba(255,255,255,0.03)}
-    .brand-card img{width:100%;height:140px;object-fit:cover;border-radius:10px}
-    .brand-card h3{color:var(--gold);margin:10px 0 6px}
-    footer{padding:28px;text-align:center;color:var(--muted);border-top:1px solid rgba(255,255,255,0.03);margin-top:40px}
-    @media(max-width:900px){ .hero-inner{grid-template-columns:1fr} #viewer{width:100%;height:360px} h1{font-size:32px} }
-  </style>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>HIGH CHOICE — Premium Watches</title>
+<link rel="preload" href="videos/Featured1.mp4" as="video">
+<style>
+  :root{--gold:#c7a16a;--bg:#070707;--muted:#cfcfcf}
+  *{box-sizing:border-box} body{margin:0;background:linear-gradient(180deg,#000,#0b0b0b);color:#fff;font-family:Inter,system-ui,Arial}
+  header{display:flex;align-items:center;gap:18px;padding:16px 28px;position:sticky;top:0;background:linear-gradient(180deg,rgba(0,0,0,0.55),transparent);z-index:50}
+  .logo{font-weight:800;color:var(--gold);letter-spacing:1px;font-size:18px}
+  nav{margin-left:auto;display:flex;gap:12px;align-items:center}
+  nav a{color:var(--muted);text-decoration:none;padding:8px 12px;border-radius:8px;font-weight:600}
+  nav a.cta{background:var(--gold);color:#071018}
+  .hero{min-height:72vh;display:grid;grid-template-columns:1fr 540px;gap:28px;align-items:center;padding:60px 40px}
+  .hero-left .eyebrow{color:var(--gold);font-weight:700;letter-spacing:2px}
+  .hero-left h1{font-size:44px;color:var(--gold);margin:10px 0 6px}
+  .hero-left p{color:var(--muted);max-width:520px;line-height:1.5}
+  .btns{margin-top:18px;display:flex;gap:12px}
+  .btn{padding:12px 18px;border-radius:999px;text-decoration:none;font-weight:800}
+  .btn.primary{background:var(--gold);color:#071018}
+  .btn.ghost{border:1px solid rgba(255,255,255,0.06);color:var(--muted);background:transparent}
+
+  /* 3D viewer box */
+  #viewer{width:100%;height:520px;border-radius:18px;overflow:hidden;border:1px solid rgba(255,255,255,0.04);box-shadow:0 40px 120px rgba(0,0,0,0.7);background:linear-gradient(180deg,#040404,#0b0b0b)}
+  #scene-canvas{width:100%;height:100%;display:block}
+
+  /* horizontal scrolling mockup strip */
+  .mockup-strip{margin:28px 40px 60px;overflow:hidden}
+  .strip-inner{display:flex;gap:18px;will-change:transform;align-items:center;padding:18px 0}
+  .mock{width:260px;height:260px;border-radius:16px;background:#080808;border:1px solid rgba(255,255,255,0.03);display:flex;align-items:center;justify-content:center;flex-shrink:0;box-shadow:0 12px 40px rgba(0,0,0,0.6)}
+  .mock img{max-width:86%;max-height:86%;object-fit:contain;border-radius:12px}
+  .mock .label{position:absolute;margin-top:180px;color:var(--muted);font-size:13px}
+
+  .section-title{color:var(--gold);text-align:center;margin-top:8px}
+
+  /* footer */
+  footer{padding:28px;text-align:center;color:#9a9a9a;border-top:1px solid rgba(255,255,255,0.03)}
+  @media(max-width:980px){
+    .hero{grid-template-columns:1fr;gap:20px;padding:36px 20px}
+    #viewer{height:360px}
+    .mock{width:180px;height:180px}
+  }
+</style>
 </head>
 <body>
 
 <header>
-  <div class="brand">HIGH CHOICE</div>
+  <div class="logo">HIGH CHOICE</div>
   <nav>
     <a href="index.html">Home</a>
-    <a href="brand.html?brand=Rolex">Brands</a>
+    <a href="mens.html">Men</a>
+    <a href="womens.html">Women</a>
+    <a href="kids.html">Kids</a>
+    <a href="360.html">360° Viewer</a>
     <a href="about.html">About</a>
-    <a href="contact.html">Contact</a>
+    <a href="contact.html" class="cta">WhatsApp</a>
   </nav>
 </header>
 
 <section class="hero">
-  <div class="bg-video"><video autoplay muted loop playsinline src="videos/Featured1.mp4"></video></div>
-
-  <div class="hero-inner">
-    <div class="hero-left">
-      <div class="eyebrow">PREMIUM LUXURY</div>
-      <h1>High Choice — Curated Watch Collections</h1>
-      <p>Discover showroom-grade watches with cinematic 3D presentation. Men, Women & Kids — premium mockups, real materials, high-finish visuals.</p>
-      <div style="margin-top:18px">
-        <a class="btn" href="brand.html?brand=Rolex">Explore Rolex</a>
-        <a class="btn" href="brand.html?brand=Omega" style="background:transparent;border:1px solid rgba(255,255,255,0.06);color:var(--muted)">Explore Omega</a>
-      </div>
-      <div style="margin-top:22px;display:flex;gap:12px">
-        <div style="background:#111;padding:12px;border-radius:10px;border:1px solid rgba(255,255,255,0.03)"><strong style="color:var(--gold)">3D</strong><div style="color:var(--muted);font-size:13px">Animated mockups</div></div>
-        <div style="background:#111;padding:12px;border-radius:10px;border:1px solid rgba(255,255,255,0.03)"><strong style="color:var(--gold)">COD / PREPAID</strong><div style="color:var(--muted);font-size:13px">UPI QR + WhatsApp</div></div>
-      </div>
+  <div class="hero-left">
+    <div class="eyebrow">PREMIUM LUXURY</div>
+    <h1>High Choice — Curated Watch Collections</h1>
+    <p>Discover cinematic 3D mockups and high-finish watch photography. Click any category to explore thousands of models. Click a mockup for product page and quick checkout via WhatsApp.</p>
+    <div class="btns">
+      <a class="btn primary" href="mens.html">Shop Men</a>
+      <a class="btn ghost" href="brand.html?brand=Rolex">Explore Rolex</a>
     </div>
+  </div>
 
-    <div id="viewer" aria-hidden="false">
-      <!-- Optional three.js canvas will be injected here by script if you provide assets/models/watch.glb -->
-      <canvas id="scene-canvas" style="width:100%;height:100%;display:block"></canvas>
-    </div>
+  <div id="viewer">
+    <canvas id="scene-canvas"></canvas>
   </div>
 </section>
 
-<section class="section">
-  <h2 style="color:var(--gold);text-align:center">Explore Brands</h2>
-  <div id="brandGrid" class="grid"></div>
+<section class="mockup-strip" aria-label="Featured 3D mockups">
+  <h3 class="section-title">Featured Mockups — Scroll</h3>
+  <div id="strip" class="strip-inner" tabindex="0" aria-roledescription="carousel">
+    <!-- JS will populate mockups -->
+  </div>
 </section>
 
-<footer>© 2025 HIGH CHOICE • WhatsApp: +91 70209 66879</footer>
+<footer>© 2025 HIGH CHOICE • WhatsApp: <a href="https://wa.me/917020966879" style="color:var(--gold);text-decoration:none">+91 70209 66879</a></footer>
 
-<!-- three.js (optional viewer) -->
+<!-- three.js -->
 <script src="https://unpkg.com/three@0.152.2/build/three.min.js"></script>
 <script src="https://unpkg.com/three@0.152.2/examples/js/loaders/GLTFLoader.js"></script>
 
-<!-- products data -->
 <script src="products.js"></script>
-
 <script>
-  // populate brand grid from PRODUCTS keys
-  const brandGrid = document.getElementById('brandGrid');
+/* Populate strip with a selection of products (featured from each brand) */
+(function(){
+  const strip = document.getElementById('strip');
   const brands = Object.keys(PRODUCTS);
-  // ensure ordering with main brands first
-  const order = ["Rolex","Maserati","Armani","Tissot","G-Shock","Casio","Patek Philippe","Audemars Piguet","Cartier","Omega","Rado","Longines","WomenOthers","Kids"];
-  const finalList = order.filter(b=>brands.includes(b)).concat(brands.filter(b=>!order.includes(b)));
-  brandGrid.innerHTML = finalList.map(b => {
-    const thumb = (PRODUCTS[b] && PRODUCTS[b][0] && PRODUCTS[b][0].image) || "assets/images/hero-watch.jpg";
-    // link to brand page with query param
-    return `<a class="brand-card" href="brand.html?brand=${encodeURIComponent(b)}">
-      <img src="${thumb}" alt="${b}">
-      <h3>${b}</h3>
-      <div style="color:var(--muted);font-size:13px">${(PRODUCTS[b]||[]).length} models</div>
+  // collect first model from each brand to showcase
+  const picks = [];
+  brands.forEach(b => { if(PRODUCTS[b] && PRODUCTS[b][0]) picks.push({brand:b, item:PRODUCTS[b][0]}); });
+  // add a few repeats for smooth continuous scrolling
+  const repeated = [...picks, ...picks, ...picks];
+  strip.innerHTML = repeated.map(p=>{
+    const it = p.item;
+    return `<a class="mock" href="product.html?brand=${encodeURIComponent(p.brand)}&slug=${encodeURIComponent(it.slug)}" title="${it.name}">
+      <img src="${it.image}" alt="${it.name}">
     </a>`;
   }).join('');
+  // horizontal auto-scroll animation
+  let pos = 0;
+  function loop(){
+    pos += 0.4; // speed
+    if(pos > strip.scrollWidth/3) pos = 0; // reset for smooth loop
+    strip.style.transform = 'translateX(' + (-pos) + 'px)';
+    requestAnimationFrame(loop);
+  }
+  requestAnimationFrame(loop);
+
+  // allow dragging to scroll
+  let isDown=false, startX, scrollLeft;
+  strip.addEventListener('mousedown', (e)=>{ isDown=true; startX = e.pageX - strip.offsetLeft; strip.style.cursor='grabbing'; });
+  window.addEventListener('mouseup', ()=>{ isDown=false; strip.style.cursor='grab'; });
+  window.addEventListener('mousemove', (e)=>{ if(!isDown) return; const x = e.pageX - strip.offsetLeft; const walk = (x - startX) * 1.5; pos -= walk; startX = x; });
+})();
 </script>
 
-<!-- simple three.js viewer fallback (same as earlier) -->
+<!-- lightweight three.js viewer fallback (rotating watch model or image) -->
 <script>
 (function(){
   const canvas = document.getElementById('scene-canvas');
-  if(!canvas) return;
   const viewer = document.getElementById('viewer');
+  if(!canvas) return;
   const renderer = new THREE.WebGLRenderer({canvas, alpha:true, antialias:true});
   renderer.setPixelRatio(Math.min(window.devicePixelRatio||1,2));
   renderer.setSize(viewer.clientWidth, viewer.clientHeight, false);
   const scene = new THREE.Scene();
-  const camera = new THREE.PerspectiveCamera(35, viewer.clientWidth/viewer.clientHeight, 0.1, 1000);
+  const camera = new THREE.PerspectiveCamera(36, viewer.clientWidth/viewer.clientHeight, 0.1, 1000);
   camera.position.set(0,0,3.2);
   const hemi = new THREE.HemisphereLight(0xffffff,0x080808,0.4); scene.add(hemi);
   const key = new THREE.DirectionalLight(0xfff6d6,1.2); key.position.set(4,6,4); scene.add(key);
   const root = new THREE.Group(); scene.add(root);
 
-  // try load GLB, else fallback plane image
   const loader = new THREE.GLTFLoader();
   let modelLoaded=false;
   loader.load('assets/models/watch.glb', gltf=>{
-    gltf.scene.traverse(n=>{ if(n.isMesh){ n.castShadow=true; n.receiveShadow=true; }});
+    gltf.scene.traverse(n=>{ if(n.isMesh){ n.castShadow=true; n.receiveShadow=true; n.material.metalness=0.6; n.material.roughness=0.35; }});
     const box = new THREE.Box3().setFromObject(gltf.scene); const size = box.getSize(new THREE.Vector3()).length();
     const center = box.getCenter(new THREE.Vector3()); gltf.scene.position.sub(center);
     const scale = 1.2/size; gltf.scene.scale.setScalar(scale);
     root.add(gltf.scene); modelLoaded=true;
-  }, undefined, err=>{ // fallback
+  }, undefined, err=>{
+    // fallback: show hero image on a plane
     const texLoader = new THREE.TextureLoader();
-    const tex = texLoader.load('assets/images/hero-watch.jpg', () => { renderer.render(scene,camera); });
-    tex.encoding = THREE.sRGBEncoding;
+    const tex = texLoader.load('assets/images/hero-watch.jpg');
     const geo = new THREE.PlaneGeometry(1.8,1.8);
     const mat = new THREE.MeshStandardMaterial({map:tex, metalness:0.2, roughness:0.45});
     const mesh = new THREE.Mesh(geo, mat); mesh.rotation.y=-0.2; root.add(mesh); modelLoaded=true;
   });
-  setTimeout(()=>{ if(!modelLoaded){ const texLoader = new THREE.TextureLoader(); const tex = texLoader.load('assets/images/hero-watch.jpg'); const geo = new THREE.PlaneGeometry(1.8,1.8); const mat = new THREE.MeshStandardMaterial({map:tex}); const mesh = new THREE.Mesh(geo,mat); root.add(mesh);} }, 1500);
 
-  window.addEventListener('mousemove', e=>{ const x=(e.clientX/window.innerWidth)-0.5; const y=(e.clientY/window.innerHeight)-0.5; root.rotation.y += (x*0.15 - root.rotation.y)*0.06; root.rotation.x += (y*0.06 - root.rotation.x)*0.06; });
+  // mouse par subtle rotate
+  let isDown=false, prevX=0;
+  window.addEventListener('pointerdown',(e)=>{ isDown=true; prevX=e.clientX; });
+  window.addEventListener('pointerup',()=>isDown=false);
+  window.addEventListener('pointermove',(e)=>{ if(!isDown) return; const dx=(e.clientX-prevX)/200; root.rotation.y += dx; prevX=e.clientX; });
+
+  // animate
+  function animate(){ root.rotation.z = Math.sin(Date.now()*0.0002)*0.02; root.rotation.y += 0.002; renderer.render(scene,camera); requestAnimationFrame(animate); } animate();
+
   window.addEventListener('resize', ()=>{ renderer.setSize(viewer.clientWidth, viewer.clientHeight,false); camera.aspect = viewer.clientWidth/viewer.clientHeight; camera.updateProjectionMatrix(); });
-  function animate(){ root.rotation.z = Math.sin(Date.now()*0.0002)*0.02; renderer.render(scene,camera); requestAnimationFrame(animate); } animate();
 })();
 </script>
 
