--- a/index.html
+++ b/index.html
@@ -7,65 +7,88 @@
 
 <style>
 *{margin:0;padding:0;box-sizing:border-box;font-family:'Poppins',sans-serif;}
-body{background:#0b0f19;color:white;overflow-x:hidden;}
+body{background:#05060c;color:white;overflow-x:hidden;}
 
 header{
     width:100%;padding:18px 24px;
     display:flex;align-items:center;justify-content:space-between;
-    background:#0e1324;position:fixed;top:0;z-index:1000;
+    background:rgba(10,10,18,0.85);
+    backdrop-filter:blur(12px);
+    position:fixed;top:0;z-index:1000;
 }
-.logo{font-size:22px;font-weight:600;color:#9bb8ff;letter-spacing:1px;}
-
+.logo{font-size:22px;font-weight:600;color:#b9aaff;letter-spacing:1px;}
 .menu-btn{font-size:26px;color:white;cursor:pointer;}
 
+/* Hamburger Menu */
 nav{
     position:fixed;top:0;right:-100%;
-    width:70%;height:100vh;background:#12182c;
-    padding:40px 24px;transition:0.3s ease;
+    width:70%;height:100vh;background:#0f1320;
+    padding:40px 24px;transition:0.3s ease;z-index:1500;
 }
 nav.active{right:0;}
-
 nav a{
-    display:block;margin:18px 0;font-size:18px;
-    color:#dce4ff;text-decoration:none;transition:0.3s;
+    display:block;margin:18px 0;font-size:18px;color:#d7dbff;text-decoration:none;
 }
-nav a:hover{color:#8ab4ff;}
+nav a:hover{color:#9bb8ff;}
 
+/* Page Padding */
 section{width:100%;padding:120px 24px 60px;}
 
-/* 3D FLOATING CARD STYLE */
+/* CATEGORY CARDS */
 .card-grid{
     display:flex;gap:20px;justify-content:center;flex-wrap:wrap;margin-top:20px;
 }
-
 .card{
     width:260px;height:180px;border-radius:16px;
-    background:linear-gradient(135deg,#1a2140,#101527);
-    box-shadow:0 10px 30px rgba(0,0,0,0.4);
+    background:linear-gradient(135deg,#1b2342,#0f1528);
+    box-shadow:0 10px 30px rgba(0,0,0,0.5);
     display:flex;align-items:center;justify-content:center;
     color:white;font-size:22px;font-weight:600;
     transition:transform 0.4s ease, box-shadow 0.4s ease;
-    cursor:pointer;position:relative;overflow:hidden;
+    position:relative;cursor:pointer;
+    overflow:hidden;
 }
 .card:hover{
-    transform:translateY(-12px) scale(1.04) rotateX(8deg);
-    box-shadow:0 25px 50px rgba(0,0,0,0.55);
+    transform:translateY(-12px) scale(1.04) rotateX(6deg);
+    box-shadow:0 25px 50px rgba(0,0,0,0.6);
 }
-.card span{position:relative;z-index:2;}
-
 .card::before{
     content:"";
     position:absolute;top:-50%;left:-50%;
     width:200%;height:200%;
-    background:radial-gradient(circle,#5f7aff33,transparent 70%);
+    background:radial-gradient(circle,#7f8dff33,transparent 70%);
     animation:floatGlow 6s infinite linear;
 }
 @keyframes floatGlow{
     0%{transform:translate(0,0);}
-    100%{transform:translate(50px,80px);}
+    100%{transform:translate(60px,90px);}
+}
+
+/* VIDEO BOX (Floating Glow) */
+.video-box{
+    width:100%;max-width:780px;margin:60px auto;
+    background:#0f1528;border-radius:22px;
+    padding:18px;border:1px solid #20263d;
+    box-shadow:0 20px 60px rgba(0,0,0,0.5);
+    position:relative;overflow:hidden;
+}
+.video-box::before{
+    content:"";
+    position:absolute;top:-30%;left:-30%;
+    width:160%;height:160%;
+    background:radial-gradient(circle,#8a7bff22,#0000);
+    filter:blur(40px);
+    animation:pulse 8s infinite linear;
+}
+@keyframes pulse{
+    0%{transform:scale(1);}
+    100%{transform:scale(1.4);}
+}
+video{
+    width:100%;border-radius:18px;
+    display:block;box-shadow:0 8px 30px rgba(0,0,0,0.55);
 }
 </style>
-
 </head>
 <body>
 
@@ -92,24 +115,33 @@ function toggleMenu(){
 </script>
 
 <section>
-    <h2 style="text-align:center;font-size:28px;color:#9bb8ff;">Choose Category</h2>
 
-    <div class="card-grid">
-        <a href="men.html" style="text-decoration:none;">
-            <div class="card"><span>Men</span></div>
-        </a>
-        <a href="women.html" style="text-decoration:none;">
-            <div class="card"><span>Women</span></div>
-        </a>
-        <a href="kids.html" style="text-decoration:none;">
-            <div class="card"><span>Kids</span></div>
-        </a>
-    </div>
+<h2 style="text-align:center;font-size:28px;color:#b9aaff;">Choose Category</h2>
+
+<div class="card-grid">
+    <a href="men.html" style="text-decoration:none;color:white;">
+        <div class="card"><span>Men</span></div>
+    </a>
+
+    <a href="women.html" style="text-decoration:none;color:white;">
+        <div class="card"><span>Women</span></div>
+    </a>
+
+    <a href="kids.html" style="text-decoration:none;color:white;">
+        <div class="card"><span>Kids</span></div>
+    </a>
+</div>
+
+<!-- VIDEO SECTION -->
+<div class="video-box">
+    <video src="videos/Featured1.mp4" autoplay loop muted playsinline></video>
+</div>
+
 </section>
 
-<footer style="text-align:center;padding:20px;color:#7985b1;">
+<footer style="text-align:center;padding:20px;color:#7b83a8;">
     © HIGH CHOICE — All Rights Reserved
 </footer>
 
 </body>
-      </html>
+</html>
