--- a/index.html
+++ b/index.html
@@ -1,147 +1,236 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>HIGH CHOICE — Premium Watches</title>
-
+<meta name="description" content="HIGH CHOICE — Premium watch showroom" />
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
 <style>
-*{margin:0;padding:0;box-sizing:border-box;font-family:'Poppins',sans-serif;}
-body{background:#05060c;color:white;overflow-x:hidden;}
+  :root{
+    --bg-1:#050814;
+    --bg-2:#061127;
+    --accent:#9aa6ff;
+    --muted:#94a0c9;
+    --card:#0e1626;
+    --glass: rgba(255,255,255,0.03);
+    --radius:18px;
+  }
+  *{box-sizing:border-box}
+  html,body{height:100%;margin:0;font-family:'Poppins',system-ui,-apple-system,Segoe UI,Roboto,"Helvetica Neue",Arial;color:#e6eefc;background:linear-gradient(180deg,var(--bg-1),var(--bg-2));-webkit-font-smoothing:antialiased}
+  a{color:inherit;text-decoration:none}
+  /* animated background "bubbles" */
+  .bg{
+    position:fixed;inset:0;z-index:0;pointer-events:none;overflow:hidden;
+    background:linear-gradient(180deg, rgba(3,6,12,0.65), rgba(6,9,18,0.88));
+  }
+  .bubble{
+    position:absolute;border-radius:50%;
+    filter:blur(44px);opacity:0.9;mix-blend-mode:screen;
+    animation: drift 18s linear infinite;
+  }
+  .bubble.b1{width:420px;height:240px;left:-6%;top:8%;background:radial-gradient(circle at 30% 30%, #6bb9b0, transparent 35%);animation-duration:20s}
+  .bubble.b2{width:520px;height:300px;right:8%;top:6%;background:radial-gradient(circle at 50% 50%, #7b63d2, transparent 42%);animation-duration:22s}
+  .bubble.b3{width:360px;height:220px;left:18%;top:12%;background:radial-gradient(circle at 20% 40%, #3fb8ff, transparent 38%);animation-duration:26s}
+  .bubble.b4{width:260px;height:160px;right:18%;top:18%;background:radial-gradient(circle at 60% 40%, #5bd1a2, transparent 40%);animation-duration:24s}
+  @keyframes drift{
+    0%{transform:translateY(0) translateX(0) rotate(0)}
+    50%{transform:translateY(18px) translateX(40px) rotate(6deg)}
+    100%{transform:translateY(0) translateX(0) rotate(0)}
+  }
 
-header{
-    width:100%;padding:18px 24px;
-    display:flex;align-items:center;justify-content:space-between;
-    background:rgba(10,10,18,0.85);
-    backdrop-filter:blur(12px);
-    position:fixed;top:0;z-index:1000;
-}
-.logo{font-size:22px;font-weight:600;color:#b9aaff;letter-spacing:1px;}
-.menu-btn{font-size:26px;color:white;cursor:pointer;}
+  /* header */
+  header{position:fixed;left:0;right:0;top:0;height:68px;display:flex;align-items:center;justify-content:space-between;padding:12px 22px;z-index:40;background:linear-gradient(180deg, rgba(6,10,18,0.28), rgba(6,10,18,0.06));border-bottom:1px solid rgba(255,255,255,0.02)}
+  .logo{font-weight:700;color:var(--accent);letter-spacing:1px;font-size:18px}
+  .hamb{font-size:22px;color:#eaf0ff;cursor:pointer;padding:8px;border-radius:8px;background:rgba(255,255,255,0.02);border:1px solid rgba(255,255,255,0.02)}
+  /* nav overlay */
+  .nav-panel{position:fixed;right:-100%;top:0;width:74%;max-width:420px;height:100vh;background:linear-gradient(180deg,#0b1120,#081021);box-shadow:-20px 0 80px rgba(4,6,14,0.6);z-index:80;padding:40px 22px;transition:right .32s cubic-bezier(.2,.9,.2,1)}
+  .nav-panel.open{right:0}
+  .nav-panel h3{color:var(--accent);margin:0 0 16px;font-size:18px}
+  .nav-panel a{display:block;color:#d9e3ff;padding:12px 0;border-bottom:1px solid rgba(255,255,255,0.02);font-weight:600}
+  .nav-panel a.small{font-weight:500;color:var(--muted)}
+  .nav-close{position:absolute;left:12px;top:12px;font-size:20px;cursor:pointer;color:#dfe8ff}
 
-/* Hamburger Menu */
-nav{
-    position:fixed;top:0;right:-100%;
-    width:70%;height:100vh;background:#0f1320;
-    padding:40px 24px;transition:0.3s ease;z-index:1500;
-}
-nav.active{right:0;}
-nav a{
-    display:block;margin:18px 0;font-size:18px;color:#d7dbff;text-decoration:none;
-}
-nav a:hover{color:#9bb8ff;}
+  /* page content */
+  main{position:relative;z-index:10;padding-top:92px;min-height:100vh}
+  .container{max-width:1160px;margin:0 auto;padding:28px}
 
-/* Page Padding */
-section{width:100%;padding:120px 24px 60px;}
+  /* three cards row (centered) */
+  .cards{display:flex;gap:20px;justify-content:center;align-items:center;flex-wrap:wrap;margin-top:18px}
+  .card{
+    width:300px;height:180px;border-radius:16px;background:linear-gradient(180deg, rgba(255,255,255,0.02), rgba(0,0,0,0.06));
+    border:1px solid rgba(255,255,255,0.03);box-shadow:0 20px 60px rgba(2,6,12,0.6);
+    display:flex;flex-direction:column;align-items:flex-start;justify-content:flex-end;padding:18px;cursor:pointer;transition:transform .45s cubic-bezier(.2,.9,.2,1),box-shadow .45s;overflow:hidden;
+  }
+  .card:hover{transform:translateY(-12px) scale(1.02);box-shadow:0 40px 120px rgba(2,6,12,0.7)}
+  .card h4{margin:0;color:#dff0ff;letter-spacing:0.6px}
+  .card p{margin:6px 0 0;color:var(--muted);font-size:13px}
 
-/* CATEGORY CARDS */
-.card-grid{
-    display:flex;gap:20px;justify-content:center;flex-wrap:wrap;margin-top:20px;
-}
-.card{
-    width:260px;height:180px;border-radius:16px;
-    background:linear-gradient(135deg,#1b2342,#0f1528);
-    box-shadow:0 10px 30px rgba(0,0,0,0.5);
-    display:flex;align-items:center;justify-content:center;
-    color:white;font-size:22px;font-weight:600;
-    transition:transform 0.4s ease, box-shadow 0.4s ease;
-    position:relative;cursor:pointer;
-    overflow:hidden;
-}
-.card:hover{
-    transform:translateY(-12px) scale(1.04) rotateX(6deg);
-    box-shadow:0 25px 50px rgba(0,0,0,0.6);
-}
-.card::before{
-    content:"";
-    position:absolute;top:-50%;left:-50%;
-    width:200%;height:200%;
-    background:radial-gradient(circle,#7f8dff33,transparent 70%);
-    animation:floatGlow 6s infinite linear;
-}
-@keyframes floatGlow{
-    0%{transform:translate(0,0);}
-    100%{transform:translate(60px,90px);}
-}
+  /* big 360-style video box */
+  .video-wrap{max-width:980px;margin:44px auto 18px;border-radius:22px;padding:18px;background:linear-gradient(180deg, rgba(255,255,255,0.01), rgba(0,0,0,0.06));border:1px solid rgba(255,255,255,0.02);box-shadow:0 40px 140px rgba(2,6,12,0.65);position:relative;overflow:hidden}
+  .video-glow{position:absolute;left:-20%;top:-30%;width:140%;height:120%;background:radial-gradient(circle at 20% 20%, rgba(124,95,255,0.08), transparent 20%), radial-gradient(circle at 80% 60%, rgba(63,184,255,0.06), transparent 18%);filter:blur(44px);z-index:1;pointer-events:none}
+  .video-wrap video{display:block;width:100%;height:460px;max-height:60vh;object-fit:cover;border-radius:12px;position:relative;z-index:2}
+  @media(max-width:880px){ .video-wrap video{height:320px} .card{width:90%;max-width:420px} }
 
-/* VIDEO BOX (Floating Glow) */
-.video-box{
-    width:100%;max-width:780px;margin:60px auto;
-    background:#0f1528;border-radius:22px;
-    padding:18px;border:1px solid #20263d;
-    box-shadow:0 20px 60px rgba(0,0,0,0.5);
-    position:relative;overflow:hidden;
-}
-.video-box::before{
-    content:"";
-    position:absolute;top:-30%;left:-30%;
-    width:160%;height:160%;
-    background:radial-gradient(circle,#8a7bff22,#0000);
-    filter:blur(40px);
-    animation:pulse 8s infinite linear;
-}
-@keyframes pulse{
-    0%{transform:scale(1);}
-    100%{transform:scale(1.4);}
-}
-video{
-    width:100%;border-radius:18px;
-    display:block;box-shadow:0 8px 30px rgba(0,0,0,0.55);
-}
+  /* featured strip */
+  .featured{margin-top:34px}
+  .featured h3{text-align:center;color:var(--accent);margin-bottom:18px}
+  .strip{display:flex;gap:18px;overflow:hidden;padding:8px 6px 22px 6px}
+  .strip .item{min-width:220px;background:linear-gradient(180deg, rgba(255,255,255,0.02), rgba(0,0,0,0.06));border-radius:12px;padding:10px;border:1px solid rgba(255,255,255,0.03);box-shadow:0 18px 60px rgba(2,6,12,0.6)}
+  .strip img{width:100%;height:120px;object-fit:cover;border-radius:8px}
+  .strip h4{color:#dff0ff;margin:8px 0 0;font-size:14px}
+  .strip p{color:var(--muted);margin:6px 0 0;font-size:12px}
+
+  /* footer */
+  footer{margin-top:38px;text-align:center;color:var(--muted);padding:36px 8px;border-top:1px solid rgba(255,255,255,0.02)}
+
+  /* misc */
+  .center{text-align:center}
 </style>
 </head>
 <body>
+  <div class="bg" aria-hidden="true">
+    <div class="bubble b1"></div>
+    <div class="bubble b2"></div>
+    <div class="bubble b3"></div>
+    <div class="bubble b4"></div>
+  </div>
 
-<header>
+  <header role="banner">
     <div class="logo">HIGH CHOICE</div>
-    <div class="menu-btn" onclick="toggleMenu()">☰</div>
-</header>
+    <button class="hamb" id="hambBtn" aria-label="Open menu">☰</button>
+  </header>
 
-<nav id="menu">
+  <aside class="nav-panel" id="navPanel" aria-hidden="true">
+    <button class="nav-close" id="navClose" aria-label="Close menu">✕</button>
+    <h3>Menu</h3>
     <a href="index.html">Home</a>
     <a href="men.html">Men</a>
     <a href="women.html">Women</a>
     <a href="kids.html">Kids</a>
-    <a href="#">Policies</a>
-    <a href="#">About Us</a>
-    <a href="#">Contact</a>
-    <a href="#">Return Policy</a>
-</nav>
+    <a href="#" class="small">Policies</a>
+    <a href="#" class="small">About Us</a>
+    <a href="#" class="small">Contact</a>
+    <a href="#" class="small">Return Policy</a>
+  </aside>
+
+  <main>
+    <div class="container">
+      <!-- top 3 cards -->
+      <div class="center">
+        <h2 style="font-size:26px;color:var(--accent);margin:6px 0 8px">Choose Category</h2>
+      </div>
+      <div class="cards" role="list" aria-label="Categories">
+        <a href="men.html" style="text-decoration:none">
+          <div class="card" role="listitem" aria-label="Men watches">
+            <div>
+              <h4>Men</h4>
+              <p>Mens watches — premium collection</p>
+            </div>
+          </div>
+        </a>
+
+        <a href="women.html" style="text-decoration:none">
+          <div class="card" role="listitem" aria-label="Women watches">
+            <div>
+              <h4>Women</h4>
+              <p>Women's watches — elegant designs</p>
+            </div>
+          </div>
+        </a>
+
+        <a href="kids.html" style="text-decoration:none">
+          <div class="card" role="listitem" aria-label="Kids watches">
+            <div>
+              <h4>Kids</h4>
+              <p>Kids collection — durable & stylish</p>
+            </div>
+          </div>
+        </a>
+      </div>
+
+      <!-- 360-style video box: Featured1.mp4 -->
+      <div class="video-wrap" aria-label="Featured video">
+        <div class="video-glow" aria-hidden="true"></div>
+        <video src="videos/Featured1.mp4" autoplay muted loop playsinline preload="auto" aria-label="Featured video"></video>
+      </div>
+
+      <!-- featured strip -->
+      <section class="featured" aria-labelledby="featuredTitle">
+        <h3 id="featuredTitle">Featured — Handpicked</h3>
+        <div class="strip" id="strip" aria-live="polite">
+          <!-- demo cards: replace images with your product images if needed -->
+          <div class="item" role="article">
+            <img src="https://images.unsplash.com/photo-1518544889289-f1c1a3a4e9c5?auto=format&w=900&q=80" alt="Yachtmaster">
+            <h4>Yachtmaster</h4>
+            <p style="color:var(--muted)">Rolex</p>
+          </div>
+
+          <div class="item" role="article">
+            <img src="https://images.unsplash.com/photo-1541446654331-9bb9b3b1cc2d?auto=format&w=900&q=80" alt="Omega Speedmaster">
+            <h4>Omega Speedmaster</h4>
+            <p style="color:var(--muted)">Omega</p>
+          </div>
+
+          <div class="item" role="article">
+            <img src="https://images.unsplash.com/photo-1543163521-1bf5391b7c1f?auto=format&w=900&q=80" alt="G-Shock">
+            <h4>G-Shock GA2100</h4>
+            <p style="color:var(--muted)">G-Shock</p>
+          </div>
+
+          <div class="item" role="article">
+            <img src="https://images.unsplash.com/photo-1523275335684-37898b6baf30?auto=format&w=900&q=80" alt="Armani">
+            <h4>Armani Classic</h4>
+            <p style="color:var(--muted)">Armani</p>
+          </div>
+        </div>
+      </section>
+
+      <footer>
+        © 2025 HIGH CHOICE — All Rights Reserved
+      </footer>
+    </div>
+  </main>
 
 <script>
-function toggleMenu(){
-    document.getElementById("menu").classList.toggle("active");
-}
+  // Hamburger open/close — accessible & robust
+  (function(){
+    const btn = document.getElementById('hambBtn');
+    const panel = document.getElementById('navPanel');
+    const close = document.getElementById('navClose');
+
+    function openNav(){
+      panel.classList.add('open');
+      panel.setAttribute('aria-hidden','false');
+      document.body.style.overflow = 'hidden';
+    }
+    function closeNav(){
+      panel.classList.remove('open');
+      panel.setAttribute('aria-hidden','true');
+      document.body.style.overflow = '';
+    }
+
+    btn.addEventListener('click', openNav);
+    close.addEventListener('click', closeNav);
+    // close when clicking outside panel
+    window.addEventListener('click', (e)=>{
+      if(!panel.contains(e.target) && !btn.contains(e.target)) closeNav();
+    });
+    // keyboard escape
+    window.addEventListener('keydown', (e)=>{ if(e.key === 'Escape') closeNav(); });
+
+    // small auto-slide for featured strip (keeps moving)
+    const strip = document.getElementById('strip');
+    let x = 0;
+    function tick(){
+      x += 0.4;
+      if(x > strip.scrollWidth/2) x = 0;
+      strip.style.transform = `translateX(${-x}px)`;
+      requestAnimationFrame(tick);
+    }
+    requestAnimationFrame(tick);
+  })();
 </script>
-
-<section>
-
-<h2 style="text-align:center;font-size:28px;color:#b9aaff;">Choose Category</h2>
-
-<div class="card-grid">
-    <a href="men.html" style="text-decoration:none;color:white;">
-        <div class="card"><span>Men</span></div>
-    </a>
-
-    <a href="women.html" style="text-decoration:none;color:white;">
-        <div class="card"><span>Women</span></div>
-    </a>
-
-    <a href="kids.html" style="text-decoration:none;color:white;">
-        <div class="card"><span>Kids</span></div>
-    </a>
-</div>
-
-<!-- VIDEO SECTION -->
-<div class="video-box">
-    <video src="videos/Featured1.mp4" autoplay loop muted playsinline></video>
-</div>
-
-</section>
-
-<footer style="text-align:center;padding:20px;color:#7b83a8;">
-    © HIGH CHOICE — All Rights Reserved
-</footer>
-
 </body>
 </html>
