--- a/omega.html
+++ b/omega.html
@@ -1,110 +1,181 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>HIGH CHOICE | Omega Collection</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <style>
-    :root{
-      --bg:#0a0a0c; --text:#e6e6ea; --muted:#a7abb3;
-      --border:rgba(255,255,255,0.09); --accent:#7c5cff; --cyan:#00e0ff; --gold:#f5c56d;
-    }
-    *{box-sizing:border-box}
-    body{margin:0;font-family:Inter,Arial,sans-serif;background:var(--bg);color:var(--text)}
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Omega — HIGH CHOICE</title>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
 
-    /* Header */
-    header{position:sticky;top:0;background:linear-gradient(to bottom, rgba(10,10,12,0.85), rgba(10,10,12,0.55));
-      border-bottom:1px solid var(--border);backdrop-filter:blur(10px)}
-    .top{max-width:1100px;margin:0 auto;padding:16px 20px;display:flex;justify-content:space-between;align-items:center}
-    nav{display:flex;gap:10px}
-    nav a{color:var(--text);text-decoration:none;font-weight:700;padding:10px 12px;border-radius:10px;border:1px solid transparent;position:relative;overflow:hidden}
-    nav a::before{content:"";position:absolute;inset:0;background:linear-gradient(135deg, rgba(124,92,255,0.18), rgba(0,224,255,0.18));opacity:0;transition:.25s}
-    nav a:hover{border-color:var(--border)}
-    nav a:hover::before{opacity:1}
+<style>
+:root{
+  --bg-1:#050814;
+  --bg-2:#061127;
+  --accent:#b9aaff;
+  --muted:#94a0c9;
+  --card:rgba(255,255,255,0.04);
+  --radius:18px;
+}
+*{margin:0;padding:0;box-sizing:border-box;font-family:'Poppins',sans-serif;}
+body{
+  background:linear-gradient(180deg,var(--bg-1),var(--bg-2));
+  color:white;overflow-x:hidden;
+}
 
-    /* Page */
-    .wrap{max-width:1100px;margin:24px auto;padding:0 20px}
-    h1{font-size:1.8rem;margin:0 0 12px;font-weight:900;
-      background:linear-gradient(90deg,#fff,#00e0ff,#7c5cff,#f5c56d);
-      -webkit-background-clip:text;color:transparent}
-    p{color:var(--muted);margin:0 0 18px}
+/* Background */
+.bg{position:fixed;inset:0;z-index:0;pointer-events:none;}
+.bubble{
+  position:absolute;border-radius:50%;filter:blur(44px);
+  mix-blend-mode:screen;opacity:.9;animation:float 16s infinite linear;
+}
+@keyframes float{
+  0%{transform:translateY(0) translateX(0)}
+  50%{transform:translateY(20px) translateX(30px)}
+  100%{transform:translateY(0) translateX(0)}
+}
+.b1{width:420px;height:240px;left:-5%;top:10%;background:radial-gradient(circle,#5b7bff,transparent 40%);}
+.b2{width:460px;height:260px;right:5%;top:6%;background:radial-gradient(circle,#4bd4ff,transparent 40%);}
+.b3{width:360px;height:200px;left:20%;top:18%;background:radial-gradient(circle,#9b63ff,transparent 40%);}
 
-    /* Grid */
-    .grid{display:grid;gap:18px;grid-template-columns:repeat(3,1fr)}
-    @media (max-width:980px){.grid{grid-template-columns:repeat(2,1fr)}}
-    @media (max-width:620px){.grid{grid-template-columns:1fr}}
-    .card{border:1px solid var(--border);border-radius:14px;overflow:hidden;
-      background:linear-gradient(180deg, rgba(255,255,255,0.06), rgba(255,255,255,0.03));
-      cursor:pointer;transition:transform .25s ease, box-shadow .25s ease}
-    .card:hover{transform:translateY(-6px) rotateX(3deg) rotateY(-3deg);
-      box-shadow:0 14px 28px rgba(0,0,0,0.35)}
-    .thumb{height:160px;background:linear-gradient(135deg, rgba(124,92,255,0.25), rgba(0,224,255,0.25))}
-    .card h3{margin:14px;font-weight:900}
-    .card p{margin:0 14px 14px;color:var(--muted)}
-    .btn{margin:0 14px 14px;padding:10px 14px;border-radius:10px;border:none;
-      background:linear-gradient(135deg, rgba(124,92,255,0.35), rgba(0,224,255,0.35));
-      color:#fff;font-weight:700;cursor:pointer;transition:.25s}
-    .btn:hover{transform:translateY(-2px);box-shadow:0 8px 20px rgba(0,0,0,0.3)}
+/* Header */
+header{
+  position:fixed;top:0;left:0;right:0;height:68px;
+  display:flex;align-items:center;justify-content:space-between;
+  padding:12px 22px;z-index:50;
+  background:linear-gradient(180deg,rgba(6,10,18,0.35),rgba(6,10,18,0.05));
+  border-bottom:1px solid rgba(255,255,255,0.03);
+}
+.logo{font-size:20px;font-weight:700;color:var(--accent);}
+.hamb{font-size:22px;color:white;padding:8px;border-radius:8px;background:rgba(255,255,255,0.02);cursor:pointer;}
 
-    /* Footer */
-    footer{margin-top:26px;border-top:1px solid var(--border);padding:20px;text-align:center;color:#cfd2d8;
-      background:linear-gradient(to top, rgba(10,10,12,0.85), rgba(10,10,12,0.55))}
-  </style>
+/* Nav */
+nav{
+  position:fixed;top:0;right:-100%;width:70%;max-width:380px;height:100vh;
+  background:#0b1120;z-index:80;padding:40px 22px;transition:0.3s;
+}
+nav.open{right:0;}
+nav a{
+  display:block;margin:14px 0;color:#d7e0ff;text-decoration:none;
+  font-weight:600;border-bottom:1px solid rgba(255,255,255,0.03);padding-bottom:8px;
+}
+
+/* Layout */
+main{padding-top:100px;position:relative;z-index:5;}
+.container{max-width:1100px;margin:auto;padding:20px;}
+
+/* Product grid */
+.product-grid{
+  display:flex;flex-wrap:wrap;gap:20px;justify-content:center;margin-top:20px;
+}
+.product{
+  width:300px;border-radius:var(--radius);background:var(--card);
+  padding:14px;transition:.35s;
+  border:1px solid rgba(255,255,255,0.05);
+  box-shadow:0 20px 60px rgba(0,0,0,.45);
+}
+.product:hover{transform:translateY(-8px) scale(1.02);}
+.product img{
+  width:100%;height:220px;object-fit:cover;border-radius:12px;
+}
+.product h3{margin:12px 0 4px;}
+.product p{color:var(--muted);margin:0 0 10px;}
+.buy-btn{
+  display:block;width:100%;padding:10px;background:var(--accent);
+  color:#050814;font-weight:700;border-radius:10px;text-align:center;
+  margin-top:8px;cursor:pointer;text-decoration:none;
+}
+.buy-btn:hover{opacity:.85;}
+</style>
 </head>
+
 <body>
-  <header>
-    <div class="top">
-      <strong>HIGH CHOICE</strong>
-      <nav>
-        <a href="index.html">HOME</a>
-        <a href="men.html">MEN</a>
-        <a href="women.html">WOMEN</a>
-        <a href="kids.html">KIDS</a>
-        <a href="about.html">ABOUT</a>
-        <a href="contact.html">CONTACT</a>
-      </nav>
+
+<div class="bg">
+  <div class="bubble b1"></div>
+  <div class="bubble b2"></div>
+  <div class="bubble b3"></div>
+</div>
+
+<header>
+  <div class="logo">HIGH CHOICE</div>
+  <div class="hamb" onclick="toggleMenu()">☰</div>
+</header>
+
+<nav id="menu">
+  <a href="index.html">Home</a>
+  <a href="men.html">Men</a>
+  <a href="women.html">Women</a>
+  <a href="kids.html">Kids</a>
+  <a href="#">Policies</a>
+  <a href="#">About Us</a>
+  <a href="#">Contact</a>
+  <a href="#">Return Policy</a>
+</nav>
+
+<script>
+function toggleMenu(){
+  document.getElementById("menu").classList.toggle("open");
+}
+</script>
+
+<main>
+<div class="container">
+
+  <h2 style="text-align:center;color:var(--accent);font-size:26px;">
+    Omega — Men's Collection
+  </h2>
+
+  <div class="product-grid">
+
+    <div class="product">
+      <img src="https://images.unsplash.com/photo-1518544889289-f1c1a3a4e9c5?auto=format&w=900&q=80">
+      <h3>Omega Worldmap</h3>
+      <p>₹1799</p>
+      <a class="buy-btn" href="order.html?product=Omega%20Worldmap&price=1799">Buy Now</a>
     </div>
-  </header>
 
-  <main class="wrap">
-    <h1>Omega Collection</h1>
-    <p>Explore the premium Omega models with prices and instant WhatsApp order option.</p>
+    <div class="product">
+      <img src="https://images.unsplash.com/photo-1507679799987-c73779587ccf?auto=format&w=900&q=80">
+      <h3>Omega Speedmaster</h3>
+      <p>₹4299</p>
+      <a class="buy-btn" href="order.html?product=Omega%20Speedmaster&price=4299">Buy Now</a>
+    </div>
 
-    <section class="grid">
-      <div class="card">
-        <div class="thumb"></div>
-        <h3>Omega Seamaster</h3>
-        <p>Price: ₹4,80,000</p>
-        <button class="btn" onclick="order('Omega Seamaster')">Order via WhatsApp</button>
-      </div>
-      <div class="card">
-        <div class="thumb"></div>
-        <h3>Omega Speedmaster</h3>
-        <p>Price: ₹5,50,000</p>
-        <button class="btn" onclick="order('Omega Speedmaster')">Order via WhatsApp</button>
-      </div>
-      <div class="card">
-        <div class="thumb"></div>
-        <h3>Omega Constellation</h3>
-        <p>Price: ₹6,20,000</p>
-        <button class="btn" onclick="order('Omega Constellation')">Order via WhatsApp</button>
-      </div>
-      <div class="card">
-        <div class="thumb"></div>
-        <h3>Omega De Ville</h3>
-        <p>Price: ₹5,10,000</p>
-        <button class="btn" onclick="order('Omega De Ville')">Order via WhatsApp</button>
-      </div>
-    </section>
-  </main>
+    <div class="product">
+      <img src="https://images.unsplash.com/photo-1523275335684-37898b6baf30?auto=format&w=900&q=80">
+      <h3>Omega Seamaster</h3>
+      <p>₹1899</p>
+      <a class="buy-btn" href="order.html?product=Omega%20Seamaster&price=1899">Buy Now</a>
+    </div>
 
-  <footer>© 2025 HIGH CHOICE. All Rights Reserved.</footer>
+    <div class="product">
+      <img src="https://images.unsplash.com/photo-1543163521-1bf5391b7c1f?auto=format&w=900&q=80">
+      <h3>Omega Worldmap 2</h3>
+      <p>₹2099</p>
+      <a class="buy-btn" href="order.html?product=Omega%20Worldmap%202&price=2099">Buy Now</a>
+    </div>
 
-  <script>
-    function order(model){
-      const msg = encodeURIComponent("Hi, I want to order: " + model + " from HIGH CHOICE.");
-      window.open("https://wa.me/917869288078?text=" + msg, "_blank");
-    }
-  </script>
+    <div class="product">
+      <img src="https://images.unsplash.com/photo-1472417583565-62e7bdeda490?auto=format&w=900&q=80">
+      <h3>Omega Seamaster Automatic</h3>
+      <p>₹4899</p>
+      <a class="buy-btn" href="order.html?product=Omega%20Seamaster%20Automatic&price=4899">Buy Now</a>
+    </div>
+
+    <div class="product">
+      <img src="https://images.unsplash.com/photo-1441986300917-64674bd600d8?auto=format&w=900&q=80">
+      <h3>Omega Sun Moon Edition</h3>
+      <p>₹1799</p>
+      <a class="buy-btn" href="order.html?product=Omega%20Sun%20Moon&price=1799">Buy Now</a>
+    </div>
+
+  </div>
+
+</div>
+</main>
+
+<footer style="text-align:center;color:var(--muted);padding:30px 10px;">
+  © HIGH CHOICE — All Rights Reserved
+</footer>
+
 </body>
 </html>
