Revamp contact.html with new design and content
Updated the contact page layout and styling.

--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,21 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Contact — High Choice</title>
-<style>body{margin:0;background:#000;color:#fff;font-family:Inter,Arial}.wrap{max-width:900px;margin:40px auto;padding:18px}.card{background:#111;padding:18px;border-radius:12px}</style>
-</head><body><header style="padding:14px 18px;background:linear-gradient(180deg,rgba(0,0,0,0.6),transparent)"><div style="color:#c7a16a;font-weight:800">HIGH CHOICE</div></header>
-<div class="wrap"><div class="card"><h2>Contact Us</h2><p style="color:#bbb">WhatsApp: <a href="https://wa.me/917020966879" target="_blank">+91 70209 66879</a></p>
-<p style="color:#bbb">Email: <a href="mailto:info@highchoice.example">info@highchoice.example</a></p></div></div></body></html>
+<!doctype html>
+<html>
+<head>
+<title>Contact — HIGH CHOICE</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+body{margin:0;background:#050814;color:white;padding:20px;font-family:'Poppins';}
+h1{text-align:center;color:#b9aaff;margin-bottom:20px;}
+p{color:#c7c9d9;}
+</style>
+</head>
+
+<body>
+
+<h1>Contact Us</h1>
+
+<p><b>Email:</b> support@highchoice.in</p>
+<p><b>WhatsApp Support:</b> Available 10 AM – 8 PM</p>
+
+</body>
+</html>
